wip: update api
